# cortx

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  types.yaml
.claude/: settings.json
.claude/skills/using-cortx-cli/: SKILL.md  skill.toml
.github/workflows/: ci.yml  release.yml
.wolf/: cerebrum.md
benches/: query_bench.rs
docs/: conversation.md
docs/superpowers/plans/: 2026-04-02-cortx-cli.md  2026-04-02-using-cortx-cli-skill.md  2026-04-03-global-config.md  2026-04-03-open-source-readiness.md  2026-04-04-jarvis-skills-schema.md  2026-04-04-schema-relations-and-filenames.md  2026-04-05-human-readable-filenames.md
scripts/: release.sh
skills/jarvis/: SKILL.md  capture.md  daily-brief.md  ingestion.md  nudges.md  prioritization.md  skill.toml  weekly-review.md
skills/second-brain-protocol/: SKILL.md  skill.toml
skills/using-cortx-cli/: SKILL.md
src/: config.rs  entity.rs  error.rs  frontmatter.rs  global_config.rs  lib.rs  main.rs  slug.rs  value.rs  wikilink.rs
src/cli/: archive.rs  create.rs  delete.rs  doctor.rs  init.rs  meta.rs  mod.rs  note.rs  query_cmd.rs  rename.rs  schema.rs  show.rs  update.rs
src/query/: ast.rs  evaluator.rs  parser.rs
src/schema/: mod.rs  registry.rs  types.rs  validation.rs
src/storage/: file_lock.rs  markdown.rs  mod.rs
tests/: cli_integration_test.rs  doctor_filenames_test.rs  frontmatter_test.rs  query_evaluator_test.rs  query_parser_test.rs  rename_test.rs  schema_test.rs  storage_test.rs  value_test.rs
tests/common/: mod.rs
(+7 files in other folders)
