[package]
name = "cortx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
rayon = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "query_bench"
harness = false
